# pedigree-graph

./: .gitignore  CHANGELOG.md  CONTEXT.md  LIMITATIONS.md  README.md  pyproject.toml
docs/: architecture.md  code-quality-review.md
docs/adr/: 0001-dp-kinship-bench-split-rejected.md  0002-pair-engines-read-only-collaborators.md  0003-relationship-plan-documents-not-drives-engines.md
docs/code-quality-review/: README.md  pgq-001-fix-pair-coordinate-space-mismatch-after-from-subsample.md  pgq-002-replace-loose-constructor-inputs-and-dense-id-remapping-with-a-validated-input-model.md  pgq-003-decompose-pedigreegraph-move-relationship-engines-out-of-core-py.md  pgq-004-make-relationship-extraction-semantics-a-single-explicit-plan-instead-of-duplicated-degree-branches.md  (+6 more)
pedigree_graph/: __init__.py  _bfs_engine.py  _bfs_kernel.py  _cohort_utils.py  _core.py  _effective_size.py  _inbreeding_kernel.py  _kinship_allocator.py  _kinship_csc.py  _kinship_depth.py  _kinship_dp.py  _kinship_kernel.py  _lineage_kernel.py  _ne_caballero_toro.py  _ne_common.py  _ne_family_size.py  _ne_founders.py  _ne_hill.py  _ne_rates.py  _ne_results.py  _pair_extractor.py  _pair_utils.py  _registry.py  _streaming_counter.py  experimental.py
tests/: conftest.py  test_architecture_guardrails.py  test_bfs_kernel.py  test_cohort_utils.py  test_count_pairs_streaming.py  test_effective_size.py  test_effective_size_scaling.py  test_experimental.py  test_from_arrays_sex.py  test_inbreeding_kernel.py  test_kinship_kernel.py  test_n_ancestors.py  test_n_descendants.py  test_pair_engines.py  test_pedigree_graph.py  test_relationship_plan.py
(+1 files in other folders)
