[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pedigree-graph"
dynamic = ["version"]
description = "Sparse-matrix pedigree relationship extraction and kinship computation"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2,<3",
    "scipy>=1.14,<2",
    "numba>=0.60,<1",
]

[project.optional-dependencies]
test = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.8",
    "pandas>=3.0,<4",
    "pyarrow>=17,<24",
]

[tool.setuptools.packages.find]
include = ["pedigree_graph*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "RUF", "A", "C4", "PT", "PIE", "PERF", "TCH", "RSE", "RET", "D"]
ignore = [
    "E501",   # line too long — formatter handles wrapping
    "SIM108", # use ternary — often less readable
    "RUF002", # ambiguous unicode in docstring — scientific notation (×)
    "RUF003", # ambiguous unicode in comment — scientific notation (×)
    "D105",   # undocumented magic method — not needed
    "D107",   # undocumented __init__ — args documented in class docstring
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011", "RUF012", "D"]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pedigree_graph"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
